thrift/src/main/gen/com/intellij/plugins/thrift/lang/parser/ThriftParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.plugins.thrift.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.plugins.thrift.lang.lexer.ThriftTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ThriftParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return document(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(BASE_TYPE, CONTAINER_TYPE, CUSTOM_TYPE, LIST_TYPE,
      MAP_TYPE, SET_TYPE, TYPE),
  };

  /* ********************************************************** */
  // type type_annotations?
  public static boolean annotated_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotated_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATED_TYPE, "<annotated type>");
    r = type(b, l + 1);
    r = r && annotated_type_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // type_annotations?
  private static boolean annotated_type_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotated_type_1")) return false;
    type_annotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'bool' | 'byte' | 'i8' | 'i16' | 'i32' | 'i64' | 'double' | 'string' | 'binary' | 'slist'
  public static boolean base_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "base_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BASE_TYPE, "<base type>");
    r = consumeToken(b, BOOL);
    if (!r) r = consumeToken(b, BYTE);
    if (!r) r = consumeToken(b, I8);
    if (!r) r = consumeToken(b, I16);
    if (!r) r = consumeToken(b, I32);
    if (!r) r = consumeToken(b, I64);
    if (!r) r = consumeToken(b, DOUBLE);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, BINARY);
    if (!r) r = consumeToken(b, SLIST);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // !(')')
  static boolean brace_recovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "brace_recovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'const' annotated_type definition_name '=' const_value list_separator?
  public static boolean const_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_declaration")) return false;
    if (!nextTokenIs(b, CONST)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CONST_DECLARATION, null);
    r = consumeToken(b, CONST);
    p = r; // pin = 1
    r = r && report_error_(b, annotated_type(b, l + 1));
    r = p && report_error_(b, definition_name(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, EQUALS)) && r;
    r = p && report_error_(b, const_value(b, l + 1)) && r;
    r = p && const_declaration_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // list_separator?
  private static boolean const_declaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_declaration_5")) return false;
    list_separator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '[' (const_value list_separator?)* ']'
  public static boolean const_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_list")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && const_list_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, CONST_LIST, r);
    return r;
  }

  // (const_value list_separator?)*
  private static boolean const_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!const_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "const_list_1", c)) break;
    }
    return true;
  }

  // const_value list_separator?
  private static boolean const_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = const_value(b, l + 1);
    r = r && const_list_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // list_separator?
  private static boolean const_list_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_list_1_0_1")) return false;
    list_separator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '{' const_map_item* '}'
  public static boolean const_map(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_map")) return false;
    if (!nextTokenIs(b, LEFT_CURLY_BRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_CURLY_BRACE);
    r = r && const_map_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_CURLY_BRACE);
    exit_section_(b, m, CONST_MAP, r);
    return r;
  }

  // const_map_item*
  private static boolean const_map_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_map_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!const_map_item(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "const_map_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // const_value ':' const_value list_separator?
  public static boolean const_map_item(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_map_item")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_MAP_ITEM, "<const map item>");
    r = const_value(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && const_value(b, l + 1);
    r = r && const_map_item_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // list_separator?
  private static boolean const_map_item_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_map_item_3")) return false;
    list_separator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // int_constant | double_constant | LITERAL | IDENTIFIER | const_list | const_map
  public static boolean const_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "const_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CONST_VALUE, "<const value>");
    r = int_constant(b, l + 1);
    if (!r) r = double_constant(b, l + 1);
    if (!r) r = consumeToken(b, LITERAL);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = const_list(b, l + 1);
    if (!r) r = const_map(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // map_type | set_type | list_type
  public static boolean container_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "container_type")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, CONTAINER_TYPE, "<container type>");
    r = map_type(b, l + 1);
    if (!r) r = set_type(b, l + 1);
    if (!r) r = list_type(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'cpp_type' LITERAL
  public static boolean cpp_type_attr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "cpp_type_attr")) return false;
    if (!nextTokenIs(b, CPP_TYPE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, CPP_TYPE_ATTR, null);
    r = consumeTokens(b, 1, CPP_TYPE, LITERAL);
    p = r; // pin = 1
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // !('}')
  static boolean curly_brace_recovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "curly_brace_recovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, RIGHT_CURLY_BRACE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean custom_type(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "custom_type")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, CUSTOM_TYPE, r);
    return r;
  }

  /* ********************************************************** */
  // const_declaration
  //     | type_declaration
  //     | enum_declaration
  //     | senum_declaration
  //     | struct_declaration
  //     | union_declaration
  //     | exception_declaration
  //     | service_declaration
  static boolean declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "declaration")) return false;
    boolean r;
    r = const_declaration(b, l + 1);
    if (!r) r = type_declaration(b, l + 1);
    if (!r) r = enum_declaration(b, l + 1);
    if (!r) r = senum_declaration(b, l + 1);
    if (!r) r = struct_declaration(b, l + 1);
    if (!r) r = union_declaration(b, l + 1);
    if (!r) r = exception_declaration(b, l + 1);
    if (!r) r = service_declaration(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // IDENTIFIER
  public static boolean definition_name(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "definition_name")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, DEFINITION_NAME, r);
    return r;
  }

  /* ********************************************************** */
  // top_level_element*
  static boolean document(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "document")) return false;
    while (true) {
      int c = current_position_(b);
      if (!top_level_element(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "document", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // (FLOAT_NUMBER)
  public static boolean double_constant(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_constant")) return false;
    if (!nextTokenIs(b, FLOAT_NUMBER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, FLOAT_NUMBER);
    exit_section_(b, m, DOUBLE_CONSTANT, r);
    return r;
  }

  /* ********************************************************** */
  // enum_field ( list_separator? enum_field )*
  static boolean enum_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body")) return false;
    if (!nextTokenIs(b, IDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enum_field(b, l + 1);
    r = r && enum_body_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ( list_separator? enum_field )*
  private static boolean enum_body_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!enum_body_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "enum_body_1", c)) break;
    }
    return true;
  }

  // list_separator? enum_field
  private static boolean enum_body_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = enum_body_1_0_0(b, l + 1);
    r = r && enum_field(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // list_separator?
  private static boolean enum_body_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_body_1_0_0")) return false;
    list_separator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'enum' definition_name '{' enum_body? '}' type_annotations?
  public static boolean enum_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration")) return false;
    if (!nextTokenIs(b, ENUM)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM_DECLARATION, null);
    r = consumeToken(b, ENUM);
    p = r; // pin = 1
    r = r && report_error_(b, definition_name(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFT_CURLY_BRACE)) && r;
    r = p && report_error_(b, enum_declaration_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHT_CURLY_BRACE)) && r;
    r = p && enum_declaration_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // enum_body?
  private static boolean enum_declaration_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_3")) return false;
    enum_body(b, l + 1);
    return true;
  }

  // type_annotations?
  private static boolean enum_declaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_declaration_5")) return false;
    type_annotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // IDENTIFIER ('=' int_constant)? type_annotations?
  public static boolean enum_field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_field")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ENUM_FIELD, "<enum field>");
    r = consumeToken(b, IDENTIFIER);
    p = r; // pin = 1
    r = r && report_error_(b, enum_field_1(b, l + 1));
    r = p && enum_field_2(b, l + 1) && r;
    exit_section_(b, l, m, r, p, ThriftParser::enum_field_recovery);
    return r || p;
  }

  // ('=' int_constant)?
  private static boolean enum_field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_field_1")) return false;
    enum_field_1_0(b, l + 1);
    return true;
  }

  // '=' int_constant
  private static boolean enum_field_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_field_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && int_constant(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // type_annotations?
  private static boolean enum_field_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_field_2")) return false;
    type_annotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // !('}' | IDENTIFIER | ',' )
  static boolean enum_field_recovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_field_recovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !enum_field_recovery_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '}' | IDENTIFIER | ','
  private static boolean enum_field_recovery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "enum_field_recovery_0")) return false;
    boolean r;
    r = consumeToken(b, RIGHT_CURLY_BRACE);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  /* ********************************************************** */
  // 'exception' definition_name '{' fields_body '}' type_annotations?
  public static boolean exception_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exception_declaration")) return false;
    if (!nextTokenIs(b, EXCEPTION)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, EXCEPTION_DECLARATION, null);
    r = consumeToken(b, EXCEPTION);
    p = r; // pin = 1
    r = r && report_error_(b, definition_name(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFT_CURLY_BRACE)) && r;
    r = p && report_error_(b, fields_body(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, RIGHT_CURLY_BRACE)) && r;
    r = p && exception_declaration_5(b, l + 1) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // type_annotations?
  private static boolean exception_declaration_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "exception_declaration_5")) return false;
    type_annotations(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // field_id? field_req? annotated_type definition_name ('=' const_value)? field_xsd_options? type_annotations? list_separator?
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = field_0(b, l + 1);
    r = r && field_1(b, l + 1);
    r = r && annotated_type(b, l + 1);
    p = r; // pin = 3
    r = r && report_error_(b, definition_name(b, l + 1));
    r = p && report_error_(b, field_4(b, l + 1)) && r;
    r = p && report_error_(b, field_5(b, l + 1)) && r;
    r = p && report_error_(b, field_6(b, l + 1)) && r;
    r = p && field_7(b, l + 1) && r;
    exit_section_(b, l, m, r, p, ThriftParser::field_recovery);
    return r || p;
  }

  // field_id?
  private static boolean field_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_0")) return false;
    field_id(b, l + 1);
    return true;
  }

  // field_req?
  private static boolean field_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_1")) return false;
    field_req(b, l + 1);
    return true;
  }

  // ('=' const_value)?
  private static boolean field_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_4")) return false;
    field_4_0(b, l + 1);
    return true;
  }

  // '=' const_value
  private static boolean field_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && const_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // field_xsd_options?
  private static boolean field_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_5")) return false;
    field_xsd_options(b, l + 1);
    return true;
  }

  // type_annotations?
  private static boolean field_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_6")) return false;
    type_annotations(b, l + 1);
    return true;
  }

  // list_separator?
  private static boolean field_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_7")) return false;
    list_separator(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // int_constant ':'
  public static boolean field_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_id")) return false;
    if (!nextTokenIs(b, "<field id>", HEX_NUMBER, INT_NUMBER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_ID, "<field id>");
    r = int_constant(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // !(')' | '+' | '-' | 'binary' | 'bool' | 'byte' | 'double' | 'i8' | 'i16' | 'i32' | 'i64' | 'list' |
  //                             'map' | 'optional' | 'required' | 'set' | 'slist' | 'string' | '}'| int_constant | IDENTIFIER  | ';' | ',' )
  static boolean field_recovery(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_recovery")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !field_recovery_0(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ')' | '+' | '-' | 'binary' | 'bool' | 'byte' | 'double' | 'i8' | 'i16' | 'i32' | 'i64' | 'list' |
  //                             'map' | 'optional' | 'required' | 'set' | 'slist' | 'string' | '}'| int_constant | IDENTIFIER  | ';' | ','
  private static boolean field_recovery_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_recovery_0")) return false;
    boolean r;
    r = consumeToken(b, RIGHT_BRACE);
    if (!r) r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, BINARY);
    if (!r) r = consumeToken(b, BOOL);
    if (!r) r = consumeToken(b, BYTE);
    if (!r) r = consumeToken(b, DOUBLE);
    if (!r) r = consumeToken(b, I8);
    if (!r) r = consumeToken(b, I16);
    if (!r) r = consumeToken(b, I32);
    if (!r) r = consumeToken(b, I64);
    if (!r) r = consumeToken(b, LIST);
    if (!r) r = consumeToken(b, MAP);
    if (!r) r = consumeToken(b, OPTIONAL);
    if (!r) r = consumeToken(b, REQUIRED);
    if (!r) r = consumeToken(b, SET);
    if (!r) r = consumeToken(b, SLIST);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = consumeToken(b, RIGHT_CURLY_BRACE);
    if (!r) r = int_constant(b, l + 1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    if (!r) r = consumeToken(b, SEMICOLON);
    if (!r) r = consumeToken(b, COMMA);
    return r;
  }

  /* ********************************************************** */
  // 'required' | 'optional'
  public static boolean field_req(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field_req")) return false;
    if (!nextTokenIs(b, "<field req>", OPTIONAL, REQUIRED)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD_REQ, "<field req>");
    r = consumeToken(b, REQUIRED);
    if (!r) r = consumeToken(b, OPTIONAL);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
